<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.example.android.icoffee.MainActivity">

        <EditText
            android:id="@+id/enterName"
            style="@style/EnterName"
            android:hint="@string/Name" />

        <TextView
            android:id="@+id/title_text_view"
            style="@style/HeaderTextStyle"
            android:text="@string/Toppings" />

        <CheckBox
            android:id="@+id/notify_me_checkbox"
            style="@style/Checkbox"
            android:paddingTop="16dp"
            android:text="@string/Whipped_Cream" />

        <CheckBox
            android:id="@+id/notify_me_checkbox2"
            style="@style/Checkbox"
            android:text="@string/Milk" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/Quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/btnMinus" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/QuantityTextView"
                android:text="@string/bQuantity"
                android:textColor="@android:color/black" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/btnPlus" />

        </LinearLayout>


        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/Order_summary" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/orderSummaryValue" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/Order" />

    </LinearLayout>

</ScrollView>
